Add registry-agnostic cleanup action with tests

--- a/.act.env.example
+++ b/.act.env.example
@@ -1,10 +1,21 @@
 # Act Environment Variables
 # Copy this file to .act.env and fill in your values
+# Note: Act uses environment variables, but GitHub Actions uses vars/secrets
+# These env vars can be used in workflows via ${{ env.VAR_NAME }}
 
 # GitHub repository information (for testing)
 GITHUB_REPOSITORY=owner/repo-name
 GITHUB_REPOSITORY_OWNER=owner
 
-# Optional: Registry URLs for testing
-# TEST_REGISTRY_URL=ghcr.io
-# TEST_GITEA_URL=https://gitea.example.com
+# E2E Test Configuration (matching GitHub Actions variables)
+# These are used by the E2E test workflow matrix
+# E2E_GHCR_USERNAME=your-username
+# E2E_GITEA_URL=https://gitea.example.com
+# E2E_GITEA_USERNAME=your-gitea-username
+# E2E_GITEA_OWNER=your-gitea-org
+# E2E_DOCKERHUB_USERNAME=your-dockerhub-username
+# E2E_DOCKERHUB_OWNER=your-dockerhub-org
+
+# Additional registry configuration (from ~/.actrc if available)
+# DOCKERHUB_USERNAME=your-dockerhub-username
+# REGISTRY_NAME=your-registry-hostname
