--- a/.act.secrets.example
+++ b/.act.secrets.example
@@ -1,14 +1,20 @@
 # Act Secrets
 # Copy this file to .act.secrets and fill in your values
 # WARNING: Never commit .act.secrets to git!
+# Note: Act uses secrets file, but GitHub Actions uses repository secrets
+# These secrets match the E2E test workflow requirements
+# You can also configure these in ~/.actrc using -s flag
 
 # GitHub token for testing GHCR provider and release operations
 # Generate a token with 'packages:read' and 'packages:write' scopes
 GITHUB_TOKEN=ghp_your_github_token_here
 
-# Optional: Gitea token for testing Gitea provider
-# TEST_GITEA_TOKEN=your_gitea_token_here
+# E2E Test Secrets (matching GitHub Actions secrets)
+# E2E_GITEA_TOKEN=your_gitea_token_here
+# E2E_DOCKERHUB_TOKEN=your_dockerhub_token_or_password_here
 
-# Optional: Docker Hub credentials for testing Docker Hub provider
-# DOCKER_USERNAME=your_docker_username
-# DOCKER_PASSWORD=your_docker_password
+# Additional secrets (from ~/.actrc if available)
+# Note: Usernames belong in .act.vars, not here - only tokens/passwords go in secrets
+# GITEA_TOKEN=your_gitea_token_here
+# DOCKERHUB_TOKEN=your_dockerhub_token_here
+# REGISTRY_PASSWORD=your_registry_password_here
