fix: Use repository_owner instead of actor for GHCR username
For GHCR authentication with GITHUB_TOKEN, the username must match the organization/owner name (LiquidLogicLabs), not the actor (ravensorb). This fixes the 'permission_denied: write_package' error.

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -62,7 +62,7 @@ jobs:
             url: ghcr.io
             registry_host: ghcr.io
             image_name_format: 'ghcr.io/{prefix}/e2e-test-image'
-            username: ${{ vars.E2E_GHCR_USERNAME || github.actor }}
+            username: ${{ vars.E2E_GHCR_USERNAME || github.repository_owner }}
             token_secret: GITHUB_TOKEN
             package_prefix: ${{ github.repository_owner }}
             skip_if_missing: false
