chore: align verbose logging with step debug

--- a/action.yml
+++ b/action.yml
@@ -97,7 +97,7 @@ inputs:
   
   # Logging
   verbose:
-    description: 'Enable verbose debug logging'
+    description: 'Enable verbose debug logging. Also enabled when ACTIONS_STEP_DEBUG=true.'
     required: false
     default: 'false'
 
