--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.11.1",
-    "@actions/exec": "^1.1.1"
+    "@actions/exec": "^1.1.1",
+    "undici": "^6.21.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
